--- a/Paint/View/PaintForm.resx
+++ b/Paint/View/PaintForm.resx
@@ -120,6 +120,9 @@
   <metadata name="mainMenu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>230, 17</value>
+  </metadata>
   <metadata name="imageList.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>127, 17</value>
   </metadata>
@@ -128,7 +131,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABg
-        GQAAAk1TRnQBSQFMAgEBCQEAAbQBAAG0AQABEAEAARABAAT/ARkBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        GQAAAk1TRnQBSQFMAgEBCQEAAfwBAAH8AQABEAEAARABAAT/ARkBAAj/AUIBTQE2BwABNgMAASgDAAFA
         AwABMAMAAQEBAAEYBgABJP8A/wBmAAENAQoBDAEVAQcBBrEAARYBBwEFAQ4CCgMAARcBBwEEAcICwLEA
         ARgBBgEDAdsC2QEOAgoD4gEXAQYBBLEAARgBBgEDA/gB2wLZA+oBFgEHAQUBFgEHAQWuAAEYAQYBAwP9
         A/gD8QPqARYBBwEFrgABGAEGAQMD/wP9A/gBFgEHAQWxAAEYAQYBAwb/ARYBBwEFtAABGAEGAQMD/wEW
